k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fabmanage
  labels:
    name: fabmanage
    environment: production
